--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -152,8 +152,10 @@ stages:
           submodules: false
           targets:
             - wheels_cp3[789]-manylinux*x86_64
+            - wheels_cp3[789]-manylinux*aarch64
             - wheels_cp3[789]-macosx*
             - wheels_cp310-manylinux*x86_64
+            - wheels_cp310-manylinux*aarch64
             - wheels_cp310-macosx*
             - sdist
 
