--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,103 +44,11 @@ pr:
   autoCancel: true
 
 stages:
-  - stage: FirstPhaseTests
-    displayName: Core Tests
-    jobs:
-    - template: check-skip.yml@OpenAstronomy
-    - template: run-tox-env.yml@OpenAstronomy
-      parameters:
-        default_python: '3.8'
-        submodules: false
-        coverage: codecov
-        toxdeps: tox-pypi-filter
-        posargs: -n=4
-        libraries:
-          apt:
-            - libopenjp2-7
-        envs:
-          - linux: py39
-
-  - stage: SecondPhaseTests
-    displayName: Stage 2 Tests
-    dependsOn: FirstPhaseTests
-    condition: and(succeeded(), ne(dependencies.FirstPhaseTests.outputs['check_skip.search.found'], 'true'))
-    jobs:
-    - template: run-tox-env.yml@OpenAstronomy
-      parameters:
-        default_python: '3.8'
-        submodules: false
-        coverage: codecov
-        toxdeps: tox-pypi-filter
-        posargs: -n=4
-        libraries:
-          apt:
-            - libopenjp2-7
-            - graphviz
-          brew:
-            - openjpeg
-        envs:
-          - macos: py37
-          - windows: py310
-          - linux: py37-oldestdeps
-          - linux: py38-conda
-            libraries: {}
-
-  - stage: SecondPhaseTestsAllowedFail
-    displayName: Stage 2 Tests - Online
-    dependsOn: FirstPhaseTests
-    condition: and(succeeded(), ne(dependencies.FirstPhaseTests.outputs['check_skip.search.found'], 'true'))
-    jobs:
-    - template: run-tox-env.yml@OpenAstronomy
-      parameters:
-        default_python: '3.8'
-        submodules: false
-        coverage: codecov
-        toxdeps: tox-pypi-filter
-        posargs: -n=4
-        libraries:
-          apt:
-            - libopenjp2-7
-            - graphviz
-          brew:
-            - openjpeg
-        envs:
-          - linux: build_docs_ci
-            posargs: " "
-            pytest: false
-          - linux: py38-online
-
-
-  - ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
-    - stage: CronTests
-      displayName: Cron Tests
-      dependsOn: []  # Don't wait on other stages
-      jobs:
-      - template: run-tox-env.yml@OpenAstronomy
-        parameters:
-          default_python: '3.8'
-          submodules: false
-          coverage: codecov
-          toxdeps: tox-pypi-filter
-          posargs: -n=4
-          libraries:
-            apt:
-              - libopenjp2-7
-              - graphviz
-            yum:
-              - openssl-devel
-              - freetype-devel
-              - libpng-devel
-              - hdf5-devel
-          envs:
-            - linux: base_deps
-            - linux: py39-devdeps
-            - linux: pyinstaller
 
   # On branches which aren't main, and not Pull Requests, build the wheels but only upload them on tags
-  - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'main'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+ # - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'main'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
     - stage: Release
-      dependsOn: SecondPhaseTests
+      #dependsOn: SecondPhaseTests
       jobs:
       - template: publish.yml@OpenAstronomy
         parameters:
